--- a/index_origin.html
+++ b/index_origin.html
@@ -33,17 +33,9 @@
             <a href="javascript:;" class="mdui-typo-headline">Lazy's Live</a>
             <a href="javascript:;" class="mdui-typo-title phone-visit">个人直播，测试用。欢迎收看~</a>
             <div class="mdui-toolbar-spacer"></div>
-            <a href="https://www.lazy.ink"
-              class="mdui-shadow-3 mdui-btn mdui-btn-ripple mdui-color-pink-400 pc-visit phone-visit">
-              <i class="mdui-icon material-icons">&#xe88a;</i> 主页
-            </a>
-            <a href="https://blog.imlazy.ink:233"
+            <a href="https://blog.xypigeon.ink"
               class="mdui-shadow-3 mdui-btn mdui-btn-ripple mdui-color-deep-purple-500 phone-visit">
               <i class="mdui-icon material-icons">&#xe3e3;</i> 博客
-            </a>
-            <a href="https://api.imlazy.ink"
-              class="mdui-shadow-3 mdui-btn mdui-btn-ripple mdui-color-teal-500 phone-visit">
-              <i class="mdui-icon material-icons">&#xe53b;</i> API
             </a>
             <a href="javascript:void(0);" class="mdui-shadow-3 mdui-btn mdui-btn-ripple">
               <i class="mdui-icon material-icons">&#xe853;</i>
@@ -86,8 +78,7 @@
           <div class="mdui-card-content mdui-typo">
             <footer>直播间公告</footer>
             <p>
-              B站直播间地址：<a href="https://live.bilibili.com/22816605"
-                target="_blank">https://live.bilibili.com/22816605</a><button class="mdui-btn"><del>懒得排版</del></button>
+              暂无
             </p>
           </div>
         </div>
