--- a/chat.html
+++ b/chat.html
@@ -271,7 +271,7 @@
       var aT = localStorage.getItem("accessToken");
       var cT = localStorage.getItem("clientToken");
       ws = new WebSocket(
-        "ws://localhost:8848/?accessToken=" + aT + "&clientToken=" + cT
+        "wss://live.xypigeon.ink/livews/?accessToken=" + aT + "&clientToken=" + cT
         //wss://s1.imlazy.ink:233/livews/?accessToken=" + aT + "&clientToken=" + cT
       );
 
