--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
-  <meta name="keywords" content="Lazy,lazy,Lazy's Live,lazylive,lazyslive,live,Lazy的直播间" />
-  <meta name="description" content="Lazy的个人直播间" />
-  <meta name="author" content="Lazy" />
+  <meta name="keywords" content="g2nnyS的直播间" />
+  <meta name="description" content="g2nnyS的个人直播间" />
+  <meta name="author" content="g2nnyS" />
   <meta http-equiv="X-UA-Compatible" content="IE=11" />
-  <title>Lazy's Live</title>
+  <title>g2nnyS Live</title>
   <link rel="icon" href="https://tva1.sinaimg.cn/large/008qLT8ggy1h6q69154tij30ku0lbtl1.jpg" />
   <link href="https://font.sec.miui.com/font/css?family=MiSans:400,500,600,700:Chinese_Simplify,Latin,Chinese_Traditional&amp;display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="./resources/shit.css?version=20220802" />
