--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  </head>
  <body class="mdui-theme-layout-auto">
   <div id="bg"></div>
-  <img class="NekohaShizuku" src="https://s1.imlazy.ink:233/img/2021/06/30/99535bc41007020210630.png" />
+  <img class="NekohaShizuku" src="https://files.xypigeon.ink/image/ganyu3.png" />
   <div class="mdui-container">
    <div class="mdui-row">
     <div class="mdui-col-sm-12">
