--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       if (r.status == 200) {
         document.title = "正在直播：" + response.description;
             $("#status").replaceWith('在线');
-            videoUrl = "https://s1.imlazy.ink:233/live/livestream/livestream.flv";
+            videoUrl = "https://live.xypigeon.ink/live/livestream/livestream.flv";
       } else {
         videoUrl = "hd.mp4"
         $("#status").replaceWith('离线');
