--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         if(ableConnect == true){
           document.title = "正在直播：" + info.description;
             $("#status").replaceWith('在线');
-            videoUrl = "https://s1.imlazy.ink:233/live/livestream/livestream.flv";
+            videoUrl = "https://live.xypigeon.ink/live/livestream/livestream.flv";
         } else {
           videoUrl = "hd.mp4"
           $("#status").replaceWith('离线');
